# whatdidmedicarepay.com

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md
client/: index.html  index.ts  package.json  snowpack.config.js  tsconfig.json
client/public/: index.html
client/src/: App.svelte  ProviderSearch.svelte
client/src/utils/: text.ts
data/: prepare.py
data-exploration/: .gitignore  README.md  pyproject.toml
data-exploration/notebooks/: prepare_data_exp.ipynb  price_adjustments.ipynb
data-exploration/notebooks/utils/: sql.py
load-test/: README.md  simple__search_api__sam.js
server/: .gitignore  go.mod  go.sum  main.go
server/config/: config.go
server/repositories/: db.go
server/routes/: routes.go  search.go  static.go
