[tool.poetry]
name = "whatdidmedicarepay-data-exploration"
version = "0.1.0"
description = ""
authors = ["Alex Wendland <me@alexwendland.com>"]
license = "UNLICENSED"

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
ipykernel = "^5.5.0"
matplotlib = "^3.3.4"
pandas = "^1.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
